<?xml version="1.0"?>
<package>
  <name>bluetooth_bridge</name>
  <version>1.0.0</version>
  <description>
      Package provides a Bridge between ROS and Bluetooth Device.
      Currently supports only the "SERVER" mode (i.e. robot acts as Bluetooth server).

      Default topics:
       /bluetooth/send     - (std_msgs String) - send a message here to send it
                                                 via Bluetooth.
       /bluetooth/received - (std_msgs String) - messages received via Bluetooth
                                                 are published to this topic.
       /bluetooth/status   - (std_msgs String) - any changes to connection state
                                                 are published to this topic for
                                                 debugging and information.

      Parameters:
       /rfcomm_channel - the channel RFCOMM will use.
       /send_topic     - topic for sending messages via Bluetooth.
       /recv_topic     - topic for receiving messages via Bluetooth.
       /status_topic   - topic for sending connection status.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="YuryDW@gmail.com">Yury D.</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/bluetooth_bridge</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
